--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ script:
 deploy:
   provider: heroku
   api_key:
-  app:
+    secure: c582c132-56c0-4e5d-ad05-d38ec8027fba
+  app: watch-party
   run: rails db:migrate
